--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,10 @@
     <title>Curso HTML5, CSS3 e JavaScript</title>
 </head>
 <body>
-    
+    <div style="width:100%; height:100vh; display: flex; align-items: center;justify-content: center;">
+        <h1 style="font-size: 3em; font-weight:300; font-family: 'roboto', sans-serif;">
+            Seja Bem vindo(a) ao Curso HTML5, CSS3 e JavaScript
+        </h1>
+    </div>
 </body>
 </html>
