--- a/ex-01.html
+++ b/ex-01.html
@@ -2,63 +2,66 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <title>Curso HTML5, CSS3 e JavaScript</title>
+    <style type="text/css">
+        div.container{
+            width: 100%;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            background: linear-gradient(rgba(0, 0, 0, 0.4) 70%, rgba(0, 0, 0, 0.2));
+        }
 
-        <style type="text/css">
-            div{
-                width: 100%;
-                height: 100vh;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-direction: column;
-                background: linear-gradient(rgba(0, 0, 0, 0.4) 70%, rgba(0, 0, 0, 0.2));
-            }
-
-            body {
+        body {
             margin: 0;
             padding: 0;
         }
 
-        * {
+        *{
             box-sizing: border-box;
         }
 
-            h1, 
-            h2{
-                margin: 0;
-                font-weight: 300;
-                font-family: sans-serif;
-                color: #fff;
+        h1, 
+        h2{
+            margin: 0;
+            font-weight: 300;
+            font-family: 'roboto', sans-serif;
+            color: #555;
                
-            }
-            h1{
-                font-size: 3em;
-            }
-            h2{
-                font-size: 2em;
-            }
+        }
+        h1.titulo{
+            font-size: 2em;
+            color: #fff;
+        }
+        h2.titulo{
+            font-size: 1.5em;
+            color: #fff;
+        }
 
            /* Daqui pra cima é tudo mobile em diante*/
-           body{
+        body{
             background: url("assets/images/background-mobile.webp") no-repeat;
             background-size: cover;
             background-position: center center;
-           }
+        }
 
            /*Tablet*/
-           @media (min-width: 768px){
+        @media (min-width: 768px){
 
-                body{
-                background: url("assets/images/background-tablet.webp") no-repeat;
-                background-size: cover;
-                background-position: center center;
+            body{
+            background: url("assets/images/background-tablet.webp") no-repeat;
+            background-size: cover;
+            background-position: center center;
             }
 
-           }
+        }
 
            /*Desktop*/
-           @media (min-width: 1280px){
+        @media (min-width: 1280px){
 
             body{
                 background: url("assets/images/background-desktop.webp") no-repeat;
@@ -67,13 +70,12 @@
             }
             
         }
-        </style>
-
+    </style>
     </head>
     <body>
-        <div>
-            <h1>Seja Bem vindo(a) ao Curso HTML5, CSS3 e JavaScript</h1>
-            <h2>Estamos estudando no mento: <i>HTML5</i></h2>
+        <div class="container">
+            <h1 class="titulo">Seja Bem vindo(a) ao Curso HTML5, CSS3 e JavaScript</h1>
+            <h2 class="titulo">Estamos estudando no momento: <i>HTML5</i></h2>
         </div>
     </body>
 </html>
